# marimo-operator

./: .gitignore  CONTRIBUTING.md  Makefile  PROJECT  README.md  go.mod
.github/workflows/: plugin-test.yml  publish-plugin.yml  publish.yml
api/v1alpha1/: groupversion_info.go  marimonotebook_types.go  zz_generated.deepcopy.go
cmd/: main.go
cmd/krew-shim/: main.go
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  metrics_service.yaml
config/manager/: kustomization.yaml  manager.yaml
config/network-policy/: allow-metrics-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml
deploy/: install.yaml
docker/s3fs/: Dockerfile
docs/: ARCHITECTURE.md
examples/basic/: notebook.yaml
examples/cw-storage/: README.md  notebook.yaml
examples/env-vars/: README.md  notebook.yaml
examples/git-sync-sidecar/: notebook.yaml
examples/ssh-sidecar/: README.md  notebook.yaml
internal/controller/: marimonotebook_controller.go  marimonotebook_controller_test.go  suite_test.go
plugin/: README.md  pyproject.toml
plugin/docs/: cw-mounts.md
plugin/examples/: with-cw.py  with-rsync.py  with-sshfs.py
plugin/kubectl_marimo/: __init__.py  apply.py  delete.py  deploy.py  k8s.py  main.py  resources.py  status.py  swap.py  sync.py
plugin/kubectl_marimo/formats/: markdown.py  python.py
plugin/tests/: test_formats.py  test_resources.py  test_swap.py
scripts/: release.sh  test-examples.sh  test-plugin-live.sh  test-plugin.sh
(+14 files in other folders)
